# TorchProfiling

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  module_logging.pth  requirements.txt  setup.py
.github/workflows/: ci.yml  ci_main.yml
Tests/: performace_logger_test.py  tensor_tracer_test.py  trace_test.py
include/: BackTrace.h  CFuncHook.h  CMakeLists.txt  KernelHook.h  Utils.h  python_bind.h
include/cpu/: CpuHook.h
include/cuda/: GpuProfiler.h
include/dump/: dump.h
include/hook/: CFuncHook.h  CMakeLists.txt
include/hook/LocalHook/: LocalHook.h
include/utils/: BackTrace.h  CMakeLists.txt  Utils.h
include/utils/ConsoleTable/: ConsoleTable.h  ConsoleTableRow.h  ConsoleTableUtil.h
include/utils/Lock/: FileLock.h
include/utils/Log/: Log.h
include/utils/ProfilingAccumulator/: ProfilingAccumulator.h
include/utils/Recorder/: Recorder.h
include/utils/Timer/: Timer.h
lib/: BackTrace.cpp  CFuncHook.cpp  CMakeLists.txt  KernelHook.cpp  RegisterCudaHook.cpp  RegisterHook.cpp
lib/cpu/: CMakeLists.txt  CpuHook.cpp  DumpHook.cpp
lib/cuda/: CMakeLists.txt  GpuProfiler.cpp
lib/dump/: CMakeLists.txt  DumpHook.cpp
lib/hook/: CFuncHook.cpp  CMakeLists.txt
lib/hook/LocalHook/: CMakeLists.txt  LocalHook.cpp
lib/utils/: BackTrace.cpp  CMakeLists.txt  Utils.cpp
lib/utils/ConsoleTable/: CMakeLists.txt  ConsoleTable.cpp  ConsoleTableRow.cpp  ConsoleTableUtil.cpp
lib/utils/Lock/: CMakeLists.txt  FileLock.cpp
lib/utils/Log/: CMakeLists.txt  Log.cpp
lib/utils/ProfilingAccumulator/: CMakeLists.txt  ProfilingAccumulator.cpp
lib/utils/Recorder/: CMakeLists.txt  Recorder.cpp
lib/utils/Timer/: CMakeLists.txt  Timer.cpp
module_logging/: __main__.py  analysis_gpu_log.py  analysis_xpu_log.py  analysis_xpu_without_xdnn_pytorch.py  logger.py  tools.py
python/: CMakeLists.txt
python/module_logging/: CMakeLists.txt  __init__.py  __main__.py  analysis.py  analysis_gpu_log.py  analysis_xpu_log.py  analysis_xpu_without_xdnn_pytorch.py  compare_persion.py  config.ini  config.py  cut_log.py  hook.py  init.cpp  logger.py  logging.py  percision.py  tensor_tracer.py  tools.py  trace.py  utils.py
python/module_logging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/module_logging/bootstrap/: _hook.py  sitecustomize.py
python/module_logging/configuration/: __init__.py  config.ini  config.py
python/module_logging/debug/: __init__.py  dump.py
python/module_logging/graph/: graph_debugger.py
python/module_logging/percision/: __init__.py  compare_persion.py  percision.py  tensor_tracer.py
python/module_logging/perf/: analysis.py  config.ini  cpu_perf.py  logger.py  trace.py
python/module_logging/tools/: __init__.py  cut_log.py  tools.py
script/: build.sh  build_regular.sh  format.sh
